--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if corestaurant['price']"
+    "    if restaurant['price']"
    ]
   },
   {
