--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,9 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price'].count > alternative['price'].count"
+    "    if restaurant['price'].count > alternative['price'].count:\n",
+    "        return restaurant\n",
+    "    else"
    ]
   },
   {
