--- a/index.ipynb
+++ b/index.ipynb
@@ -205,22 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.count>"
+       "'$$'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fork_fig['price']"
+    "(fork_fig['price']).cu"
    ]
   },
   {
