--- a/index.ipynb
+++ b/index.ipynb
@@ -205,22 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'$$'"
+       "<function str.count>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(fork_fig['price']).cu"
+    "(fork_fig['price']).count"
    ]
   },
   {
