Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price'].count > alternative['price'].count:\n",
+    "    if lenrestaurant['price']) > alternative['price'].count:\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
