--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if lenrestaurant['price']) > alternative['price'].count:\n",
+    "    if len(restaurant['price']) > len(alternative['price']).count:\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
