--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closesed'])"
+    "        if restaurant['is_closed'] = "
    ]
   },
   {
