--- a/index.ipynb
+++ b/index.ipynb
@@ -325,6 +325,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False\n",
     "        "
