--- a/index.ipynb
+++ b/index.ipynb
@@ -328,6 +328,7 @@
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False\n",
+    "        return \n",
     "        "
    ]
   },
