Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,7 @@
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False\n",
-    "        return \n",
+    "        selected.append\n",
     "        "
    ]
   },
