--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False\n",
     "            selected.append(restaurant)\n",
-    "        \n",
+    "        return selected\n",
     "    \n",
     "        "
    ]
