--- a/index.ipynb
+++ b/index.ipynb
@@ -329,9 +329,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False\n",
     "            selected.append(restaurant)\n",
-    "    return selected\n",
-    "    \n",
-    "        "
+    "    return selected\n"
    ]
   },
   {
